...
      setLoading(false);
    }
  };

  return (
    <SafeAreaView
      testID='reset-password-screen'
      style={styles.safeArea}
      edges={['top', 'bottom']}
    >
      <KeyboardAvoidingView
        behavior={Platform.OS === 'ios' ? 'padding' : 'height'}
        style={styles.container}
...
